# tiktokuploading

./: .env  .env.example  .gitignore  PROXY_SETUP_README.md  README.md  auto_upload.py  auto_uploader.py  autoupload.bat  browser.py  config.yaml  create_env.py  final_upload workV2.0.py  final_upload.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_minimal.txt  requirements_new.txt  requirements_optimized.txt  run_upload.bat  scheduler_state.json  setup.py  setup_proxy.py  test.py  test_proxy.py  test_upload_result.py  tiktokupload.rar  titles.txt
.claude/: settings.local.json
data/: env_example.txt
docs/: QUICKSTART.md  README_v2.md
proxy_auth_temp/: background.js  manifest.json
scripts/: auto_uploader.py  browser.py  check_proxy.py  create_proxy_extension.py  instagram_uploader.py  proxy_manager.py  selenium_uploader.py  setup_v2.py  telegram_notify.py  test_browser.py  test_config.py  test_full_flow.py  test_videofile_fix.py
src/: __init__.py  uploader_app.py
src/core/: config_manager.py  file_manager.py  logger.py  platform_base.py  retry_manager.py  scheduled_uploader.py  scheduler.py
src/gui/: web_interface.py
src/gui/templates/: dashboard.html  schedule.html
utils/: autoupload.bat  run_upload.bat
